# readme-sync

./: CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  check.sh
.github/workflows/: ci.yml
src/: badges.rs  cmark_data.rs  cmark_docs.rs  cmark_item.rs  cmark_readme.rs  cmark_util.rs  codemap_files.rs  codemap_spans.rs  config.rs  docs_parser.rs  file.rs  file_docs.rs  lib.rs  manifest.rs  package.rs  sync.rs  tags.rs  text_source.rs
