[package]
name = "readme-sync"
version = "0.2.1"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2021"
rust-version = "1.71.1"
description = "Checks that your readme and documentation are synchronized"
readme = "README.md"
repository = "https://github.com/zheland/readme-sync"
documentation = "https://docs.rs/readme-sync"
license = "MIT OR Apache-2.0"
categories = ["development-tools::testing"]
keywords = ["assert", "test", "sync", "readme", "docs"]

[features]
default = [
    "codemap",
    "codemap-diagnostic",
    "glob",
    "proc-macro2",
    "pulldown-cmark",
    "serde",
    "syn",
    "thiserror",
    "toml"
]

[dependencies.codemap]
version = "0.1.3"
optional = true

[dependencies.codemap-diagnostic]
version = "0.1.2"
optional = true

[dependencies.glob]
version = "0.3.1"
optional = true

[dependencies.platforms]
version = "3.4.1"
optional = true

[dependencies.proc-macro2]
version = "1.0.86"
optional = true
default-features = false
features = ["span-locations"]

[dependencies.pulldown-cmark]
version = "0.12.1"
optional = true
default-features = false

[dependencies.serde]
version = "1.0.210"
optional = true
features = ["derive"]

[dependencies.syn]
version = "2.0.79"
optional = true
features = ["full", "extra-traits"]

[dependencies.thiserror]
version = "1.0.64"
optional = true

[dependencies.toml]
version = "0.8.19"
optional = true

[dev-dependencies]
version-sync = "0.9.5"

[package.metadata.docs.rs]
all-features = true
