[package]
name = "readme-sync"
version = "0.3.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2021"
rust-version = "1.71.1"
description = "Checks that your readme and documentation are synchronized"
documentation = "https://docs.rs/readme-sync"
readme = "README.md"
repository = "https://github.com/zheland/readme-sync"
license = "MIT OR Apache-2.0"
keywords = ["assert", "test", "sync", "readme", "docs"]
categories = ["development-tools::testing"]


[dependencies]
codemap = "0.1.3"
codemap-diagnostic = "0.1.2"
glob = "0.3.1"
platforms = "3.4.1"
proc-macro2.version = "1.0.87"
proc-macro2.default-features = false
proc-macro2.features = ["span-locations"]
pulldown-cmark.version = "0.12.1"
pulldown-cmark.default-features = false
serde.version = "1.0.210"
serde.features = ["derive"]
syn.features = ["full", "extra-traits"]
syn.version = "2.0.79"
thiserror = "1.0.64"
toml = "0.8.19"

[dev-dependencies]
version-sync = "0.9.5"

[badges.maintenance]
status = "passively-maintained"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
